# Wired

./: .env.example  .gitignore  Anchor.toml  LICENSE  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
app/api/currencies/: route.ts
app/api/jito/: route.ts
app/api/jupiter/quote/: route.ts
app/api/jupiter/swap-instructions/: route.ts
app/api/rpc/: route.ts
components/: Bridge.tsx  CardSkeleton.tsx  ChainStrip.tsx  CurrencyIcon.tsx  ErrorBoundary.tsx  InputTokenChip.tsx  InteractiveCard.tsx  ModeSwitcher.tsx  PoolStrip.tsx  RouteSummary.tsx  Swap.tsx  SwapSuccessModal.tsx  TokenIcon.tsx  TokenPicker.tsx  WalletProviders.tsx  format-numbers.ts  format.ts  useCurrencies.ts  useJupiterQuote.ts  usePoolState.ts  useSolBalance.ts  useTokenBalance.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SDK.md
lib/: confirm.ts  multi-hop.ts
lib/flipcash/: buy-plan.ts  constants.ts  curve.ts  index-currencies.ts  index.ts  instructions.ts  pda.ts  quote.ts  state.ts
lib/jito/: index.ts
lib/jupiter/: fee.ts  index.ts
lib/usdf-swap/: constants.ts  index.ts  instructions.ts  pda.ts  pool.ts  swap.ts
programs/wired-router/: Cargo.toml  README.md
programs/wired-router/src/: constants.rs  cpi.rs  error.rs  lib.rs
programs/wired-router/src/instructions/: mod.rs  route_buy.rs  route_sell.rs
scripts/: list-currencies.ts  pool-info.ts  simulate-multihop.ts  simulate-sell.ts  swap.ts
