[package]
name = "wired-router"
version = "0.1.0"
description = "Wired splitter / fee router — wraps Jupiter + USDF↔USDC bridge + Flipcash buy/sell into a single Solana instruction with a 1% integrator fee."
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "wired_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl  = "0.30.1"
solana-program = "1.18"
